--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "pdf-parse": "^2.4.5",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-resizable-panels": "^3.0.6",
     "solc": "^0.8.30",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
