Fix build errors, agent streaming, and UI components - All features live and working

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@codesandbox/sandpack-react": "^2.20.0",
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^5.2.2",
     "@modelcontextprotocol/sdk": "^1.23.0",
     "@openzeppelin/contracts": "^5.4.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -50,12 +51,14 @@
     "@supabase/supabase-js": "^2.86.0",
     "@tavily/core": "^0.5.13",
     "@types/file-saver": "^2.0.7",
+    "@types/react-day-picker": "^5.2.1",
     "ai": "^5.0.104",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
+    "embla-carousel-react": "^8.6.0",
     "ethers": "^6.15.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.25",
@@ -65,9 +68,13 @@
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
     "react": "^19.2.1",
+    "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
+    "recharts": "^3.5.1",
     "solc": "^0.8.30",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "thirdweb": "^5.114.0",
