--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ethers": "^6.15.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.25",
+    "input-otp": "^1.4.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
     "next": "^16.0.7",
